@@ -1,49 +1,0 @@
-2010/07/29 14:51:02 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] Error: [] Unable to find site_temp_filestore location specified in config.php : D:/wwwroot/filesendersite/website/tmpfiles/ [] [127.0.0.1(127.0.0.1)] 
-2010-07-29 14:53:26+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 14:56:45+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 14:56:48+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 14:56:57+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 14:56:57+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 14:56:58+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:02:39+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:05:33+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:05:38+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:06:01+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:06:11+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:08:02+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:08:25+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:08:29+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:08:30+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:08:40+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:10:50+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:10:52+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:11:32+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:11:36+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:11:55+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:13:32+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:14:12+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:14:28+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:14:30+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:14:35+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:15:04+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:15:20+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:15:20+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:15:20+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:22:21+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:22:41+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:23:24+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:24:37+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:25:16+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:25:18+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:25:34+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:26:11+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:26:25+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:26:26+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 15:36:15+10:00 [Session ID: bi5rh9kcjsu6kn9rr5eqd78go0] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:28:05+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:30:19+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:31:53+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:31:58+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:31:59+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:32:38+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
-2010-07-29 16:47:49+10:00 [Session ID: apalu868rneubemulf82ghmae4] cn=Chris Richteremail=me@test.ricoshae.com.aueduPersonTargetedID=eee15a17c6de5c54ba5b36e33bdd6979be858cff[127.0.0.1(127.0.0.1)] 
